fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
   display: flex;
   flex-wrap: wrap;
   overflow-wrap: break-word;
+  max-width: 100%;
+  background: linear-gradient(to right bottom,#ECEFF4,rgb(161, 176, 199));
 }
 
 #github{
@@ -9,12 +11,11 @@ body{
 }
 
 html{
-  background: linear-gradient(to right bottom,#ECEFF4,rgb(161, 176, 199));
-  overflow-x: hidden;
+  max-width: 100%;
 }
 
 #spotify{
-  width: 95%;
+  width: 100%;
 }
 
 #project{
@@ -45,7 +46,7 @@ a:link{
   text-align: center;
   font-family: Verdana, sans-serif;
   font-size: 30px;
-  width:100%;
+
   
 }
 
@@ -63,7 +64,7 @@ a:link{
   text-align: left;
   font-size: 20px;
   padding-left: 4%;
-  width: 100%;
+
 }
 
 .basicText h1{
@@ -81,7 +82,6 @@ a:link{
   text-align: left;
   font-size: 20px;
   padding-left: 4%;
-  width: 100%;
 }
 
 .projects{
@@ -101,13 +101,10 @@ a:link{
 #mainContainer{
   transition-duration: 0.6s;
   transition-timing-function: ease;
-  padding-right: 60px;
-  width: 100%;
   
 }
 
 #c{
-  width: 100%;
   font-family: 'Trebuchet MS', sans-serif;
   text-align: left;
   font-size: 20px;
@@ -119,7 +116,6 @@ a:link{
 }
 
 #d{
-  width: 100%;
   font-family: 'Trebuchet MS', sans-serif;
   text-align: center;
   font-size: 20px;
@@ -164,7 +160,6 @@ a:link{
 }
 
 .leftText{
-  width: 100%;
   font-family: 'Trebuchet MS', sans-serif;
   text-align: left;
   font-size: 17px;
@@ -227,12 +222,6 @@ span{
 body{
   
   color: rgb(75 85 105);
-  
-}
-
-body{
-  width: 100%;
-  height: 100%;
   
 }
 
